<resources>
    <string name="app_name">AppProject1</string>
    <string name="button_add">Añadir persona</string>
    <string name="update_button">Update persona</string>
    <string name="erase_button">Eliminar persona</string>
    <string name="textFieldName">Nombre y apellidos</string>
    <string name="textFieldId">DNI</string>
    <string name="textFieldTelephone">Teléfono</string>
    <string name="rbManText">Hombre</string>
    <string name="rbWomanText">Mujer</string>
    <string name="isAdminSwitchText">¿Es admin?</string>
    <string name="datePickerTitle">Fecha de nacimiento</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="phone_Prefix">+34</string>
    <string name="toast_addPerson">Persona añadida</string>
    <string name="toast_RemovePerson">Persona eliminada</string>
    <string name="toast_UpdatePerson">Persona actualizada</string>
    <string name="label_NewPerson">Nueva persona</string>
    <string name="title_activity_person_display">PersonDisplay</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ver_lista">Ver lista</string>
    <string name="intentName">personList</string>
    <string name="ismale">IsMale</string>
    <string name="isadmin">IsAdmin</string>
    <string name="stock">TextView</string>
</resources>