<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"


        android:hint="@string/textFieldName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/outline_face_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:hint="@string/textFieldId"
        app:counterEnabled="true"
        app:counterMaxLength="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextField"
        app:startIconDrawable="@drawable/outline_fingerprint_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dniInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telephoneTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/textFieldTelephone"
        app:counterEnabled="true"
        app:counterMaxLength="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextField"
        app:prefixText="@string/phone_Prefix"
        app:startIconDrawable="@drawable/outline_phone_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/button_add"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        app:icon="@drawable/outline_add_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/updateButton"
        app:layout_constraintEnd_toStartOf="@+id/updateButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/updateButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/update_button"
        android:textSize="12sp"
        app:icon="@drawable/outline_refresh_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/eraseButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/erase_button"
        android:textSize="12sp"
        app:icon="@drawable/outline_delete_24"
        app:layout_constraintBottom_toBottomOf="@+id/updateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/updateButton" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003">

        <RadioButton
            android:id="@+id/rbMan"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/rbManText" />

        <RadioButton
            android:id="@+id/rbWoman"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/rbWomanText" />
    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/isAdminSwitch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:checked="true"
        android:text="@string/isAdminSwitchText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup"
        app:useMaterialThemeColors="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goRight"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:icon="@drawable/outline_chevron_right_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@+id/linearProgressIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goLeft"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:icon="@drawable/outline_chevron_left_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@+id/linearProgressIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="558dp" />

    <TextView
        android:id="@+id/counterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/linearProgressIndicator"
        app:layout_constraintEnd_toStartOf="@+id/goRight"
        app:layout_constraintStart_toEndOf="@+id/goLeft"
        app:layout_constraintTop_toBottomOf="@+id/updateButton" />

    <Button
        android:id="@+id/listButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_lista"
        app:layout_constraintBottom_toTopOf="@+id/linearProgressIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterText" />

</androidx.constraintlayout.widget.ConstraintLayout>